--- a/temple/css/all.css
+++ b/temple/css/all.css
@@ -1,358 +1,1 @@
-* {
-    font-family: 'Noto Sans', sans-serif;
-}
-
-.clearfix:after {
-    content: "";
-    display: table;
-    clear: both;
-}
-
-header {
-    margin-bottom: 20px;
-}
-
-main {
-    margin: 0 auto 0 auto;
-    padding: 10px 0 10px 0 !important;
-    background: white;
-}
-
-footer {
-    margin-top: 20px;
-}
-
-/* Small */
-#banner {
-    display: none;
-    background: #87cefa;
-    text-align: center;
-    height: auto;
-    border: #0B0B45 3px solid;
-    margin: auto;
-    margin-top: 10px;
-    max-width: 600px;
-}
-
-#banner span {
-    float: right;
-    margin-top: -50px;
-    font-size: larger;
-    padding: 3px 8px 3px 8px;
-}
-
-#banner span:hover {
-    cursor: pointer;
-}
-
-/* Small Header */
-header {
-    background: #0B0B45;
-    color: white;
-    width: 100%;
-    margin-top: -10px;
-    padding-top: 30px;
-    padding-bottom: 1px;
-    min-height: 70px;
-}
-
-header .icon, header h1 {
-    margin-left: 20px;
-}
-
-header .icon {
-    width: 60px;
-    float: left;
-    margin-right: 20px;
-    margin-top: -8px;
-}
-
-header h1 {
-    font-size: 14px;
-    margin-top: 5px;
-}
-
-nav button {
-    margin-top: -45px;
-    margin-right: 40px;
-    background: transparent;
-    border: none;
-    font-size: 1.75rem;
-    color: white;
-    float: right;
-    padding: 5px 9px 5px 9px;
-    border: #87cefa 2px solid;
-    cursor: pointer;
-}
-
-nav ul {
-    list-style-type: none;
-    padding-top: 10px;
-    padding-left: 0px;
-}
-
-nav ul .link {
-    background: #87cefa;
-    width: 100%;
-}
-
-nav ul a {
-    display: block;
-    padding: .8rem 2vw;
-    text-decoration: none;
-    color: black;
-    border-top: 1px solid rgba(0,0,0,0.5);
-}
-
-nav ul .link a:hover {
-    background-color: #181891;
-}
-
-nav ul a.active {
-    background: rgba(0,0,0,0.2) !important;
-    color: white !important;
-}
-
-nav .dropdown-content {
-    background: #87cefa;
-}
-
-nav .dropdown-content a {
-    padding-left: 40px;
-}
-
-nav ul {display: none}
-nav ul.open {display: block; padding-top: 40px;}
-
-#hamburgerBtn span:nth-child(1) {display: block;}
-#hamburgerBtn span:nth-child(2) {display: none;}
-
-#hamburgerBtn.open span:nth-child(1) {display: none;}
-#hamburgerBtn.open span:nth-child(2) {display: block;}
-
-@media only screen and (max-width: 1023px) {
-    nav ul .link a:hover {
-        color: white;
-    }
-}
-
-#facebook, #twitter {
-    width: 35px;
-    float: right;
-    margin-top: -40px;
-    margin-right: 20%;
-}
-
-#facebook {
-    margin-right: calc(20% + 45px);
-}
-
-@media only screen and (max-width: 460px) {
-    nav button {
-        margin: -50px 2% 0 200px;
-    }
-
-    #facebook, #twitter {
-        margin-top: -10px;
-    }
-
-    #facebook {
-        margin-right: calc(20% + 50px);
-    }
-
-    #twitter {
-        margin-right: 10px;
-    }
-}
-
-/* Small Footer */
-footer {
-    background: #0B0B45;
-    color: white;
-    text-align: center;
-    margin-bottom: 0;
-}
-
-footer .icon {
-    width: 100px;
-    margin-top: 20px;
-}
-
-footer h2 {
-    font-size: medium;
-}
-
-footer a {
-    text-decoration: none;
-    color: white;
-}
-
-footer #services {
-    margin-top: 30px;
-}
-
-footer #bottom {
-    border-top: #87cefa 2px solid;
-    padding: 7px 0 7px 0;
-}
-
-@media only screen and (min-width: 440px) {
-    footer .grid {
-        display: grid;
-        grid-template-columns: 1fr 1fr;
-    }
-}
-
-/* Medium*/
-@media only screen and (min-width: 640px) {
-    /* Medium Header */
-    header .icon {
-        width: 75px;
-    }
-
-    header h1 {
-        margin-top: 15px;
-        font-size: x-large;
-    }
-
-    #facebook, #twitter {
-        margin-top: -45px;
-    }
-
-    #facebook {
-        margin-right: calc(20% + 55px);
-    }
-
-    nav button {
-        margin-top: -50px;
-    }
-
-    /* Medium Footer */
-    footer .icon {
-        width: 100px;
-        margin-bottom: -130px;
-    }
-
-    footer #bottom p {
-        display: inline;
-        margin-right: 20px;
-    }
-}
-
-/* Large */
-@media only screen and (min-width: 1024px) {
-    /* Large Header */
-    nav button{display: none;}
-    nav {
-        float: left;
-        margin-left: 350px;
-        margin-top: -65px;
-    }
-
-    @media only screen and (max-width: 1070px) {
-        nav {
-            margin-left: 340px;
-        }
-    }
-    
-    nav ul#primaryNav {
-        display: flex;
-        margin-left: 2vw;
-        border-left: 2px solid rgba(0,0,0,0.3);
-    }
-
-    nav ul {
-        background: #0B0B45;
-    }
-
-    nav ul .link {
-        width: fit-content;
-    }
-    
-    nav ul .link a, nav ul .forcelink {
-        border: none;
-        border-right: 1px solid rgba(0,0,0,0.3);
-        padding: .5rem 1rem;
-        background: #0B0B45;
-        color: white;
-        width: fit-content;
-    }
-
-    nav ul a.active {
-        background: #87c2fa !important;
-        color: black !important;
-    }
-
-    nav ul .link a:hover, nav ul .forcelink:hover {
-        background-color: #87cefa;
-        color: black;
-    }
-      
-    /* Dropdown button */
-    .dropdown .dropbtn {
-        display: inline-block;
-    }
-
-    .dropdown-content {
-        display: none;
-        position: absolute;
-        z-index: 1;
-    }
-  
-    /* Links inside the dropdown */
-    nav ul .dropdown-content a {
-        padding: 12px 16px;
-        padding-left: 16px;
-        display: block;
-        color: white;
-        background: #0B0B45;
-    }
-
-    /* Add a grey background color to dropdown links on hover */
-    .dropdown-content a:hover {
-        background-color: #87cefa;
-        color: black;
-    }
-
-    /* Show the dropdown menu on hover */
-    .dropdown:hover .dropdown-content {
-        display: block;
-    }
-
-    #facebook {
-        margin-right: 55px;
-    }
-
-    #twitter {
-        margin-right: 0;
-    }
-
-    /* Large Footer */
-    footer .icon {
-        width: 100px !important;
-    }
-}
-
-/* Scrollbar */
-body::-webkit-scrollbar-thumb {
-    background-color: #0b0b45;
-}
-
-body::-webkit-scrollbar-track {
-    background-color: #87cefa;
-}
-
-body::-webkit-scrollbar-corner {
-    background-color: #87cefa;
-}
-
-body::-webkit-scrollbar {
-    width: 0.5rem;
-    height: 0.5rem;
-}
-
-body {
-    -ms-overflow-style: auto;
-    scrollbar-color: #0b0b45 #87cefa;
-    scrollbar-width: thin;
-}
+footer,header{background:#0b0b45;color:#fff}#banner,footer{text-align:center}#banner span:hover,nav button{cursor:pointer}header,nav ul .link{width:100%}#banner,nav .dropdown-content,nav ul .link{background:#87cefa}#hamburgerBtn span:first-child,#hamburgerBtn.open span:nth-child(2),nav ul a,nav ul.open{display:block}footer a,nav ul a{text-decoration:none}*{font-family:'Noto Sans',sans-serif}.clearfix:after{content:"";display:table;clear:both}header{margin-bottom:20px;margin-top:-10px;padding-top:30px;padding-bottom:1px;min-height:70px}main{margin:0 auto;padding:10px 0!important;background:#fff}footer{margin-top:20px;margin-bottom:0}#banner{display:none;height:auto;border:3px solid #0b0b45;margin:10px auto auto;max-width:600px}#banner span{float:right;margin-top:-50px;font-size:larger;padding:3px 8px}header .icon,header h1{margin-left:20px}header .icon{width:60px;float:left;margin-right:20px;margin-top:-8px}header h1{font-size:14px;margin-top:5px}nav button{margin-top:-45px;margin-right:40px;background:0 0;border:2px solid #87cefa;font-size:1.75rem;color:#fff;float:right;padding:5px 9px}nav ul{list-style-type:none;padding-top:10px;padding-left:0;display:none}nav ul a{padding:.8rem 2vw;color:#000;border-top:1px solid rgba(0,0,0,.5)}nav ul .link a:hover{background-color:#181891}nav ul a.active{background:rgba(0,0,0,.2)!important;color:#fff!important}nav .dropdown-content a{padding-left:40px}nav ul.open{padding-top:40px}#hamburgerBtn span:nth-child(2),#hamburgerBtn.open span:first-child{display:none}@media only screen and (max-width:1023px){nav ul .link a:hover{color:#fff}}#facebook,#twitter{width:35px;float:right;margin-top:-40px;margin-right:20%}#facebook{margin-right:calc(20% + 45px)}@media only screen and (max-width:460px){nav button{margin:-50px 2% 0 200px}#facebook,#twitter{margin-top:-10px}#facebook{margin-right:calc(20% + 50px)}#twitter{margin-right:10px}}footer .icon{width:100px;margin-top:20px}footer h2{font-size:medium}footer a{color:#fff}footer #services{margin-top:30px}footer #bottom{border-top:2px solid #87cefa;padding:7px 0}@media only screen and (min-width:440px){footer .grid{display:grid;grid-template-columns:1fr 1fr}}@media only screen and (min-width:640px){header .icon{width:75px}header h1{margin-top:15px;font-size:x-large}#facebook,#twitter{margin-top:-45px}#facebook{margin-right:calc(20% + 55px)}nav button{margin-top:-50px}footer .icon{width:100px;margin-bottom:-130px}footer #bottom p{display:inline;margin-right:20px}}@media only screen and (min-width:1024px){nav button{display:none}nav{float:left;margin-left:350px;margin-top:-65px}@media only screen and (max-width:1070px){nav{margin-left:340px}}nav ul#primaryNav{display:flex;margin-left:2vw;border-left:2px solid rgba(0,0,0,.3)}nav ul{background:#0b0b45}nav ul .link{width:fit-content}nav ul .forcelink,nav ul .link a{border:none;border-right:1px solid rgba(0,0,0,.3);padding:.5rem 1rem;background:#0b0b45;color:#fff;width:fit-content}nav ul a.active{background:#87c2fa!important;color:#000!important}.dropdown-content a:hover,nav ul .forcelink:hover,nav ul .link a:hover{background-color:#87cefa;color:#000}.dropdown .dropbtn{display:inline-block}.dropdown-content{display:none;position:absolute;z-index:1}nav ul .dropdown-content a{padding:12px 16px;display:block;color:#fff;background:#0b0b45}.dropdown:hover .dropdown-content{display:block}#facebook{margin-right:55px}#twitter{margin-right:0}footer .icon{width:100px!important}}body::-webkit-scrollbar-thumb{background-color:#0b0b45}body::-webkit-scrollbar-track{background-color:#87cefa}body::-webkit-scrollbar-corner{background-color:#87cefa}body::-webkit-scrollbar{width:.5rem;height:.5rem}body{-ms-overflow-style:auto;scrollbar-color:#0b0b45 #87cefa;scrollbar-width:thin}
